添加了针对resilientChat的单元测试